[package]
name = "sqpnp"
version = "0.2.0"
description = "A pure Rust implementation of the SQPnP perspective-n-point algorithm"
authors = ["Erica Taylor <rickytaylor26@gmail.com>"]
repository = "https://github.com/ricky26/sqpnp-rs"
license = "MIT OR Apache-2.0"
keywords = ["sqpnp", "cv", "vision", "pose"]
categories = ["computer-vision"]
edition = "2021"

[dependencies]
glam = { version = "0.29.2" }
nalgebra = { version = "0.33.2", features = ["convert-glam029"] }

[dev-dependencies]
rand = "0.8.5"
