[package]
name = "sqpnp"
version = "0.3.0"
description = "A pure Rust implementation of the SQPnP perspective-n-point algorithm"
authors = ["Erica Taylor <rickytaylor26@gmail.com>"]
repository = "https://www.github.com/ricky26/sqpnp-rs"
license = "MIT OR Apache-2.0"
keywords = ["sqpnp", "cv", "vision", "pose"]
categories = ["computer-vision"]
edition = "2021"

[dependencies]
glam = "0.30"
nalgebra = { version = "0.34", features = ["convert-glam030"] }

[dev-dependencies]
rand = "0.9"
